Skills section is added

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </div>
         </div>
         <!-- Skill section -->
-        <!-- <div class="skill-container">
-             <h3>My Skills</h3><br/>
+        <div class="skill-container">
+            <div class="separator" id="section2">My Expertise</div>
              <div class="skill-icons">
-                <div class="card card-container m-3 pt-4 text-center">
+                <div class="card card-container  text-center ">
                     <img
-                          src="/assets/img/mobile-icon.png"
+                          src="/assets/images/mobiledevelopment.png"
                           alt="Mobile App Development"
-                          class="card-img-top mx-auto skill-image"
+                          class="card-img-top mx-auto skill-image "
                     />
                     <div class="card-body">
                           <h5 class="card-title">Mobile Apps</h5>
@@ -55,21 +55,29 @@
                           </p>
                     </div>
               </div>
-              <div class="card card-container m-3 pt-4 text-center">
+              <div class="card card-container  text-center">
                     <img
-                          src="/assets/img/full-stack-icon.png"
+                          src="/assets/images/webdeveloper.png"
                           alt="Full Stack Development"
                           class="card-img-top mx-auto skill-image"
                     />
                     <div class="card-body">
                           <h5 class="card-title">Full Stack</h5>
                           <p class="card-text">
-                                React.js, Mongodb, Expressjs, Node.js, TypeScript, GraphQL
+                                HTML, CSS, Javascript, React.js, Mongodb, Expressjs, Node.js
                           </p>
                     </div>
              </div>
+             <div class="card  text-center">
+                  <img src="/assets/images/digitalMarketing.png" alt="Digital Marketing" class="card-img-top mx-auto skill-image" />
+                  <div class="card-body">
+                        <h5 class="card-title">Digital Marketing</h5>
+                        <p class="card-text">
+                              SEO, Facebook Ads, Web Analytics
+                        </p>
+                  </div>
              
-        </div> -->
+        </div>
     </div>
     <script src="bParticles.js"></script>
     <script>
